Add Javadoc and other comments, add missing methods, code formatting